# QArchive-MacOS-Subdirectory-Example

./: .gitmodules  CMakeLists.txt  README.md  main.cc
.github/workflows/: deploy.yml
